[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yield-curve-interpolation-lab"
version = "0.1.0"
description = "Public-facing yield-curve interpolation analytics project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lingxin Lei" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
